--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="Header">
             <div class="HeaderContent">
                 <div class="HeaderHeader">
-                    <h1>Johnny London Scaffolding & Groundworks</h1>
+                    <h1>Johnny London Scaffolding <span class="ltd">Ltd</span></h1>
                 </div>
                 <div class="HeaderContact">
                     <h2 class="HeaderContactEntry">07786403842</h2>
