added scss and 1st pass of scss

--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
+<!-- 
+    We specialise in temporary roofs , racking shores , dead shores , we supply scaffolding to all industrial , commercial and private property's. 
+    All our Operatives are cisrs  and citb registered, we supply a very prompt and reliable service throughout North Wales and North West, 
+    feel free to contact us for a no obligation quote or email j.l.scaffnwltd@gmail.com
+
+    We have over 60 years experience in the scaffolding industry ,
+ -->
+
+
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="compiledStyle.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
 
         <div class="Header">
-            <div class="HeaderContent">
-                <div class="HeaderHeader">
-                    <h1>Johnny London Scaffolding <span class="ltd">Ltd</span></h1>
-                </div>
-                <div class="HeaderContact">
-                    <h2 class="HeaderContactEntry">07786403842</h2>
-                    <h2 class="HeaderContactEntry">J.L.SCAFFNWLTF@GMAIL.COM</h2>
+            <div class="HeaderOuter">
+                <div class="HeaderContent">
+                    <div class="HeaderImageContainer">
+                        <img src="./images/scaff2.jpg" class="headerImage">
+                    </div>
+                    <div class="HeaderHeader">
+                        <h1>Johnny London Scaffolding <span class="ltd">NW Ltd</span></h1>
+                    </div>
+                    <div class="burgerIcon">
+                        <div class="burgerBar"></div>
+                        <div class="burgerBar"></div>
+                        <div class="burgerBar"></div>
+                    </div>
+                    <div class="HeaderRight">
+                        <div class="HeaderContact">
+                            <h2 class="HeaderContactEntry">
+                                <a href="tel:07786403842">07786403842</a>
+                            </h2>
+                            <h2 class="HeaderContactEntry">
+                                <a href="mailto:J.L.SCAFFNWLTF@GMAIL.COM">J.L.SCAFFNWLTF@GMAIL.COM</a>
+                            </h2>
+                        </div>
+                        <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="fa fa-facebook"></a>
+                    </div>
+                    <div class="nav">
+                        <div class="navLink">
+                            <a href="index.html">Home</a>
+                        </div>
+                        <div class="navLink">
+                            <a href="galary.html">Galary</a>
+                        </div>
+                        <div class="navLink">
+                            <a href="terms.html">Terms of service</a>
+                        </div>
+                        <div class="navLink">
+                            <a href="contact.html">Contact us</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -20,41 +61,52 @@
         <div class="Banner">
             <img class="BannerImage" src="./images/banner.jpg">
             <div class="BannerInner">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sint voluptatem fugit perspiciatis, optio consectetur error voluptate doloremque sapiente eligendi provident corporis quidem perferendis et. Excepturi, labore. Minima, aut consequatur.
+                <p>With over 60 years of experience, you can be sure to receive a very prompt and reliable scaffolding service throughout North Wales and the North West.</p>
+                <p>Offering a specialised service in temporary roofs, racking shores and dead shores. we supply scaffolding to all industrial , commercial and private property's.</p>
             </div>
         </div>
 
         <div class="main">
             <div class="projects">
                 <div class="project">
-                    <img class="projectImage" src="./images/scaff1.jpg">
+                    <img class="projectImage" src="./images/scaff4.jpg">
+                    <div class="projectTextArea">
+                        <div class="projectText">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                        </div>
+                    </div>
                 </div>
                 <div class="project">
-                    <img class="projectImage" src="./images/scaff2.jpg">
+                    <img class="projectImage" src="./images/scaff5.jpg">
+                    <div class="projectTextArea">
+                        <div class="projectText">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                        </div>
+                    </div>
                 </div>
                 <div class="project">
-                    <img class="projectImage" src="./images/scaff3.jpg">
+                    <img class="projectImage" src="./images/scaff6.jpg">
+                    <div class="projectTextArea">
+                        <div class="projectText">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="about">
-                <img class="aboutImage" src="./images/scaffolding.jpg"/>
+                <img class="aboutImage" src="./images/scaff1.jpg"/>
                 <div class="aboutInner">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem tempora aspernatur odio et illo veniam ipsam sunt quas nisi error eveniet vero, porro nemo iusto sequi eius ab doloribus?
+                    Feel free to <a href="contact.html" class="contactUsHere">contact us</a> for a no obligation quote
                 </div>
             </div>
         </div>
 
         <div class="Footer">
             <div class="FooterContent">
-                <div class="FooterLeft">
-                    <h2 class="FooterEntry">Address 1</h2>
-                    <h2 class="FooterEntry">Address 2</h2>
-                    <h2 class="FooterEntry">Rhyl</h2>
-                </div>  
-                <div class="FooterRight">
-                    <h2 class="FooterEntry">07786403842</h2>
-                    <h2 class="FooterEntry">J.L.SCAFFNWLTF@GMAIL.COM</h2>
+                <div class="FooterCentre">
+                    <h2 class="FooterEntry"><a href="tel:07786403842">07786403842</a></h2>
+                    <h2 class="FooterEntry"><a href="mailto:J.L.SCAFFNWLTF@GMAIL.COM">J.L.SCAFFNWLTF@GMAIL.COM</a></h2>
                 </div>
             </div>
         </div>
