--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="HeaderOuter">
                 <div class="HeaderContent">
                     <div class="HeaderImageContainer">
-                        <img src="./images/scaff2.jpg" class="headerImage">
+                        <img src="./images/logo.jpg" class="headerImage">
                     </div>
                     <div class="HeaderHeader">
                         <h1>Johnny London Scaffolding <span class="ltd">NW Ltd</span></h1>
