added gallery page, playing with nav bar

--- a/galary.html
+++ b/galary.html
@@ -80,7 +80,20 @@
         
 
         <div class="main">
-            
+            <div class="galary">
+                <img src="./images/scaff1.jpg" class="galaryImage a">
+                <img src="./images/scaff2.jpg" class="galaryImage b">
+                <img src="./images/scaff3.jpg" class="galaryImage c">
+                <img src="./images/scaff5.jpg" class="galaryImage d">
+                <img src="./images/scaff6.jpg" class="galaryImage e">
+                <img src="./images/scaff3.jpg" class="galaryImage f">
+                <img src="./images/scaff5.jpg" class="galaryImage g">
+                <img src="./images/scaff6.jpg" class="galaryImage h">
+                <img src="./images/scaff6.jpg" class="galaryImage i">
+                <img src="./images/scaff5.jpg" class="galaryImage j">
+
+
+            </div>
         </div>
 
         <div class="Footer">
