some test fixes

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 <div class="FooterCentre">
                     <h2 class="FooterEntry"><a href="tel:07786403842">07786403842</a></h2>
                     <h2 class="FooterEntry"><a href="mailto:J.L.SCAFFNWLTF@GMAIL.COM">J.L.SCAFFNWLTF@GMAIL.COM</a></h2>
+                    <a onclick=alert(window.devicePixelRatio)>Test</a>
                 </div>
             </div>
         </div>
