--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,20 @@
             </div>
         </div>
 
-        
+        <div class="Banner">
+            <img class="BannerImage" src="./images/banner.jpg">
+            <div class="BannerInner">
+                <p>We would love to hear from you.</p>
+                <p>Get in touch with us and we can work out how our skills can best meet your scaffolding needs.</p>
+            </div>
+        </div>
 
         <div class="main">
-            
+            <div class="contact_deetails">
+                <div class="contract_entry"><span class="contact_lable">Telephone :</span> <br> <a href="tel:07786403842" class="contact_item">07786403842</a></div>
+                <div class="contract_entry">    <span class="contact_lable">Email :</span> <br> <a href="mailto:J.L.SCAFFNWLTF@GMAIL.COM" class="contact_item">J.L.SCAFFNWLTF@GMAIL.COM</a></div>
+                <div class="contract_entry"> <span class="contact_lable">Facebook :</span> <br> <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="contact_item">johnnylondonscaffolding.andgroundworks</a></div>
+            </div>
         </div>
 
         <div class="Footer">
