--- a/contact.html
+++ b/contact.html
@@ -96,9 +96,16 @@
 
         <div class="Footer">
             <div class="FooterContent">
-                <div class="FooterCentre">
-                    <h2 class="FooterEntry">07786403842</h2>
-                    <h2 class="FooterEntry">J.L.SCAFFNWLTF@GMAIL.COM</h2>
+                <div class="footerNav">
+                    <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="galary.html">Galary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
+                </div>
+                <div class="FooterContact">
+                    <div class="FooterEntry"><a href="tel:07786403842">07786403842</a></div>
+                    <div class="FooterEntry"><a href="mailto:J.L.SCAFFNWLTF@GMAIL.COM">J.L.SCAFFNWLTF@GMAIL.COM</a></div>
+                    <div class="FooterEntry"><a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks">facebook.com/johnnylondonscaffolding.andgroundworks</a></div>
                 </div>
             </div>
         </div>
