adding last content

--- a/gallary.html
+++ b/gallary.html
@@ -24,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="galary.html">Galary</a>
+                    <a href="gallary.html">Gallary</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -65,7 +65,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="galary.html">Galary</a>
+                            <a href="gallary.html">Gallary</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -81,18 +81,17 @@
         
 
         <div class="main">
-            <div class="galary">
-                <img src="./images/scaff1.jpg" class="galaryImage a">
-                <img src="./images/scaff2.jpg" class="galaryImage b">
-                <img src="./images/scaff3.jpg" class="galaryImage c">
-                <img src="./images/scaff5.jpg" class="galaryImage d">
-                <img src="./images/scaff6.jpg" class="galaryImage e">
-                <img src="./images/scaff3.jpg" class="galaryImage f">
-                <img src="./images/scaff5.jpg" class="galaryImage g">
-                <img src="./images/scaff6.jpg" class="galaryImage h">
-                <img src="./images/scaff6.jpg" class="galaryImage i">
-                <img src="./images/scaff5.jpg" class="galaryImage j">
-
+            <div class="gallary">
+                <img src="./images/gallary/1.jpg" class="gallaryImage a">
+                <img src="./images/gallary/2.jpg" class="gallaryImage b">
+                <img src="./images/gallary/3.jpg" class="gallaryImage c">
+                <img src="./images/gallary/4.jpg" class="gallaryImage d">
+                <img src="./images/gallary/5.jpg" class="gallaryImage e">
+                <img src="./images/gallary/6.jpg" class="gallaryImage f">
+                <img src="./images/gallary/7.jpg" class="gallaryImage g">
+                <img src="./images/gallary/8.jpg" class="gallaryImage h">
+                <img src="./images/gallary/9.jpg" class="gallaryImage i">
+                <img src="./images/gallary/10.jpg" class="gallaryImage j">
 
             </div>
         </div>
@@ -101,7 +100,7 @@
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="galary.html">Galary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
