--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="galary.html">Galary</a>
+                    <a href="gallary.html">Gallary</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -65,7 +65,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="galary.html">Galary</a>
+                            <a href="gallary.html">Gallary</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -80,15 +80,22 @@
 
         
 
-        <div class="main">
-            
+        <div class="main terms">
+            <h1>Pricing Information</h1>
+            <p>Initial price to be agreed on after site survey, scaffolding is then available for 4 weeks. additional time is charged at 10% of the origional price per week.</p>
+
+            <h1>Insurance</h1>
+            <p>We are covered with public liability insurance, to the sum off 5 million pounds</p>
+
+            <h1>Standards</h1>
+            <p>All scaffolders are CISRS trained and CITB registered</p>
         </div>
 
         <div class="Footer">
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="galary.html">Galary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
