--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="galary.html">Galary</a>
+                    <a href="gallary.html">Gallary</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -67,7 +67,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="galary.html">Galary</a>
+                            <a href="gallary.html">Gallary</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -84,7 +84,7 @@
             <img class="BannerImage" src="./images/banner.jpg">
             <div class="BannerInner">
                 <p>With over 60 years of experience, you can be sure to receive a very prompt and reliable scaffolding service throughout North Wales and the North West.</p>
-                <p>Offering a specialised service in temporary roofs, racking shores and dead shores. we supply scaffolding to all industrial , commercial and private property's.</p>
+                <p>Ofering a specialised service in temporary roofs, racking shores and dead shores. We supply scaffolding to all industrial , commercial and private property's.</p>
             </div>
         </div>
 
@@ -94,7 +94,7 @@
                     <img class="projectImage" src="./images/scaff4.jpg">
                     <div class="projectTextArea">
                         <div class="projectText">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                            For rendering and painting. as specified by the client.
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                     <img class="projectImage" src="./images/scaff5.jpg">
                     <div class="projectTextArea">
                         <div class="projectText">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                            For rerender and painting of the chimney stack, as specified by the client.
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <img class="projectImage" src="./images/scaff6.jpg">
                     <div class="projectTextArea">
                         <div class="projectText">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                            For soffits fascias and roofing, as specified by the client.
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <img class="projectImage" src="./images/scaff7.jpg">
                     <div class="projectTextArea">
                         <div class="projectText">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, reprehenderit iusto suscipit voluptas quis id nisi consequuntur, rem voluptatem aperiam corporis ea beatae vero assumenda eos. Dolores illum illo quo?
+                            For building the stone wall on the gable end. as specified by the client
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="galary.html">Galary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
