fixed typo and email

--- a/galary.html
+++ b/galary.html
@@ -7,14 +7,12 @@
  -->
 
 
-<html>
+ <html>
     <head>
         <link rel="stylesheet" href="compiledStyle.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="script.js"></script>
-
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-       
     </head>
 
     <body>
@@ -26,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="gallary.html">Gallary</a>
+                    <a href="galary.html">Galary</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -67,7 +65,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="gallary.html">Gallary</a>
+                            <a href="galary.html">Galary</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -80,70 +78,30 @@
             </div>
         </div>
 
-        <div class="Banner">
-            <img class="BannerImage" src="./images/banner.jpg">
-            <div class="BannerInner">
-                <p>With over 60 years of experience, you can be sure to receive a very prompt and reliable scaffolding service throughout North Wales and the North West.</p>
-                <p>Offering a specialised service in temporary roofs, racking shores and dead shores. We supply scaffolding to all industrial , commercial and private property's.</p>
-            </div>
-        </div>
+        
 
         <div class="main">
-            <div class="projects">
-                <div class="project">
-                    <img class="projectImage" src="./images/scaff4.jpg">
-                    <div class="projectTextArea">
-                        <div class="projectText">
-                            For rendering and painting. as specified by the client.
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img class="projectImage" src="./images/scaff5.jpg">
-                    <div class="projectTextArea">
-                        <div class="projectText">
-                            For rerender and painting of the chimney stack, as specified by the client.
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img class="projectImage" src="./images/scaff6.jpg">
-                    <div class="projectTextArea">
-                        <div class="projectText">
-                            For soffits fascias and roofing, as specified by the client.
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img class="projectImage" src="./images/scaff7.jpg">
-                    <div class="projectTextArea">
-                        <div class="projectText">
-                            For building the stone wall on the gable end. as specified by the client
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="galary">
+                <img src="./images/scaff1.jpg" class="galaryImage a">
+                <img src="./images/scaff2.jpg" class="galaryImage b">
+                <img src="./images/scaff3.jpg" class="galaryImage c">
+                <img src="./images/scaff5.jpg" class="galaryImage d">
+                <img src="./images/scaff6.jpg" class="galaryImage e">
+                <img src="./images/scaff3.jpg" class="galaryImage f">
+                <img src="./images/scaff5.jpg" class="galaryImage g">
+                <img src="./images/scaff6.jpg" class="galaryImage h">
+                <img src="./images/scaff6.jpg" class="galaryImage i">
+                <img src="./images/scaff5.jpg" class="galaryImage j">
 
-            <div class="about">
-                <img class="aboutImage" src="./images/scaff1.jpg"/>
-                <div class="aboutInner">
-                    Feel free to <a href="contact.html" class="contactUsHere">contact us</a> for a no obligation quote
-                </div>
+
             </div>
         </div>
 
         <div class="Footer">
             <div class="FooterContent">
-                <div class="footerNav">
-                    <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
-                </div>
-                <div class="FooterContact">
-                    <div class="FooterEntry"><a href="tel:07786403842">07786403842</a></div>
-                    <div class="FooterEntry"><a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a></div>
-                    <div class="FooterEntry"><a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks">facebook.com/johnnylondonscaffolding.andgroundworks</a></div>
+                <div class="FooterCentre">
+                    <h2 class="FooterEntry">07786403842</h2>
+                    <h2 class="FooterEntry">johnnylondonscaffnground@gmail.com</h2>
                 </div>
             </div>
         </div>
