--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                                 <a href="tel:07786403842">07786403842</a>
                             </h2>
                             <h2 class="HeaderContactEntry">
-                                <a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a>
+                                <a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM">J.L.SCAFFNWLTD@GMAIL.COM</a>
                             </h2>
                         </div>
                         <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="fa fa-facebook"></a>
@@ -89,7 +89,7 @@
         <div class="main">
             <div class="contact_deetails">
                 <div class="contract_entry"><span class="contact_lable">Telephone :</span> <br> <a href="tel:07786403842" class="contact_item">07786403842</a></div>
-                <div class="contract_entry">    <span class="contact_lable">Email :</span> <br> <a href="mailto:johnnylondonscaffnground@gmail.com" class="contact_item">johnnylondonscaffnground@gmail.com</a></div>
+                <div class="contract_entry">    <span class="contact_lable">Email :</span> <br> <a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM" class="contact_item">J.L.SCAFFNWLTD@GMAIL.COM</a></div>
                 <div class="contract_entry"> <span class="contact_lable">Facebook :</span> <br> <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="contact_item">johnnylondonscaffolding.andgroundworks</a></div>
             </div>
         </div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="FooterContact">
                     <div class="FooterEntry"><a href="tel:07786403842">07786403842</a></div>
-                    <div class="FooterEntry"><a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a></div>
+                    <div class="FooterEntry"><a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM">J.L.SCAFFNWLTD@GMAIL.COM</a></div>
                     <div class="FooterEntry"><a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks">facebook.com/johnnylondonscaffolding.andgroundworks</a></div>
                 </div>
             </div>
