--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <a href="tel:07786403842">07786403842</a>
                             </h2>
                             <h2 class="HeaderContactEntry">
-                                <a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a>
+                                <a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM">J.L.SCAFFNWLTD@GMAIL.COM</a>
                             </h2>
                         </div>
                         <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="fa fa-facebook"></a>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="FooterContact">
                     <div class="FooterEntry"><a href="tel:07786403842">07786403842</a></div>
-                    <div class="FooterEntry"><a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a></div>
+                    <div class="FooterEntry"><a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM">J.L.SCAFFNWLTD@GMAIL.COM</a></div>
                     <div class="FooterEntry"><a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks">facebook.com/johnnylondonscaffolding.andgroundworks</a></div>
                 </div>
             </div>
