--- a/galary.html
+++ b/galary.html
@@ -55,7 +55,7 @@
                                 <a href="tel:07786403842">07786403842</a>
                             </h2>
                             <h2 class="HeaderContactEntry">
-                                <a href="mailto:johnnylondonscaffnground@gmail.com">johnnylondonscaffnground@gmail.com</a>
+                                <a href="mailto:J.L.SCAFFNWLTD@GMAIL.COM">J.L.SCAFFNWLTD@GMAIL.COM</a>
                             </h2>
                         </div>
                         <a href="https://www.facebook.com/johnnylondonscaffolding.andgroundworks" class="fa fa-facebook"></a>
@@ -101,7 +101,7 @@
             <div class="FooterContent">
                 <div class="FooterCentre">
                     <h2 class="FooterEntry">07786403842</h2>
-                    <h2 class="FooterEntry">johnnylondonscaffnground@gmail.com</h2>
+                    <h2 class="FooterEntry">J.L.SCAFFNWLTD@GMAIL.COM</h2>
                 </div>
             </div>
         </div>
