added latest images and changed gallary to accomidate more images

--- a/gallary.html
+++ b/gallary.html
@@ -82,6 +82,9 @@
 
         <div class="main">
             <div class="gallary">
+                <img src="./images/gallary/11.jpg" class="gallaryImage a">
+                <img src="./images/gallary/13.jpg" class="gallaryImage c">
+                <img src="./images/gallary/12.jpg" class="gallaryImage b">
                 <img src="./images/gallary/1.jpg" class="gallaryImage a">
                 <img src="./images/gallary/2.jpg" class="gallaryImage b">
                 <img src="./images/gallary/3.jpg" class="gallaryImage c">
@@ -92,6 +95,14 @@
                 <img src="./images/gallary/8.jpg" class="gallaryImage h">
                 <img src="./images/gallary/9.jpg" class="gallaryImage i">
                 <img src="./images/gallary/10.jpg" class="gallaryImage j">
+
+                <img src="./images/gallary/14.jpg" class="gallaryImage d">
+                <img src="./images/gallary/15.jpg" class="gallaryImage e">
+                <img src="./images/gallary/16.jpg" class="gallaryImage f">
+                <img src="./images/gallary/17.jpg" class="gallaryImage g">
+                <img src="./images/gallary/18.jpg" class="gallaryImage h">
+                <img src="./images/gallary/19.jpg" class="gallaryImage i">
+                <img src="./images/gallary/20.jpg" class="gallaryImage j">
 
             </div>
         </div>
